01_basics/random.txt
PS D:\WEB DEV\python> python
Python 3.12.1 (tags/v3.12.1:2305ca5, Dec  7 2023, 22:03:25) [MSC v.1937 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> chai
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'chai' is not defined
>>> chai = "masala chai"
>>> chai
'masala chai'
'036'
>>> chai
'masala chai'
>>> print(chai.lower())
masala chai
>>> print(chai.upper())
MASALA CHAI
>>> chai
'masala chai'
>>> chai = "   Masala Chai    "
>>> chai
'   Masala Chai    '
>>> print(chai.strip())
Masala Chai
>>> chai = 'lemon chai'
>>> chai = "Lemon Chai"
>>> print(chai.replace("Lemon", "Ginger"))
Ginger Chai
>>> chai
'Lemon Chai'
>>> chai = "Lemon, Ginger, Masala, Mint"
>>> print(split())
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'split' is not defined
>>> print(chai.split()) 
['Lemon,', 'Ginger,', 'Masala,', 'Mint']
>>> print(chai.split(", ")) 
['Lemon', 'Ginger', 'Masala', 'Mint']
>>> chai = "Masala Chai" 
>>> chai
'Masala Chai'
>>> print(chai.find("chai")) 
-1
>>> print(chai.find("Chai")) 
7
>>> chai = "Masala Chai Chai Chai"  
>>> print(chai.count("Chai")) 
3
>>> chai_type = "Masala" 
>>> quantity = 2
>>> order = "I ordered {} cups of {} chai"  
>>> order
'I ordered {} cups of {} chai'
>>> print(order.format(quantity, chai_type)) 
I ordered 2 cups of Masala chai
>>> chai_variety = ["Lemon", "Masala", "Ginger"] 
>>> chai_variety                                            
['Lemon', 'Masala', 'Ginger']
>>> print("".join(chai_variety)) 
LemonMasalaGinger
>>> print(" ".join(chai_variety)) 
Lemon Masala Ginger
>>> print("-".join(chai_variety)) 
Lemon-Masala-Ginger
>>> print(", ".join(chai_variety)) 
Lemon, Masala, Ginger
>>> print(" ".join(chai_variety))  
Lemon Masala Ginger
>>> chai = "Masala Chai"  
>>> chai
'Masala Chai'
>>> print(len(chai)) 
11
>>> chai 
'Masala Chai'
>>> for letter in chai:
...     print(letter) 
...
M
a
s
a
l
a

C
h
a
i
>>> chai = "He said, \"Masala chai is awesome" " 
  File "<stdin>", line 1
    chai = "He said, \"Masala chai is awesome" "
                                               ^
SyntaxError: unterminated string literal (detected at line 1)
>>> chai = "He said, \"Masala chai is awesome\" " 
>>> chai
'He said, "Masala chai is awesome" '
>>> chai = "Masala\nChai" 
>>> chai
'Masala\nChai'
>>> print(chai) 
Masala
Chai
>>> chai = r"Masala\nchai
  File "<stdin>", line 1
    chai = r"Masala\nchai
           ^
SyntaxError: unterminated string literal (detected at line 1)
>>> chai = r"Masala\nchai"
>>> print(chai) 
Masala\nchai
>>> chai = r"c:\user\pwd\"
  File "<stdin>", line 1
    chai = r"c:\user\pwd\"
           ^
SyntaxError: unterminated string literal (detected at line 1)
>>> chai = r"c:\\user\\pwd\\" 
>>> print(chai) 
c:\\user\\pwd\\
>>> print(chai) 
c:\\user\\pwd\\
PS D:\WEB DEV\python> python
Python 3.12.1 (tags/v3.12.1:2305ca5, Dec  7 2023, 22:03:25) [MSC v.1937 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> tea_varities = ["Black", "Green", "oolong", "white"]
>>> tea_varities
['Black', 'Green', 'oolong', 'white']
>>> tea_varities[-1]
'white'
>>> print(tea_varities[-1])
white
>>> print(tea_varities)
['Black', 'Green', 'oolong', 'white']
>>> tea_varities[4] = "Herbal"
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list assignment index out of range
>>> tea_varities[3] = "Herbal"
>>> print(tea_varities)
['Black', 'Green', 'oolong', 'Herbal']
>>> tea_varities[1:2]
['Green']
>>> tea_varities[1:2] = "Lemon"
>>> tea_varities
['Black', 'L', 'e', 'm', 'o', 'n', 'oolong', 'Herbal']
>>> tea_varities
['Black', 'L', 'e', 'm', 'o', 'n', 'oolong', 'Herbal']
>>> tea_varities = ["Black", "Lemon", "oolong", "white"] 
>>> tea_varities[1:3]
['Lemon', 'oolong']
>>> tea_varities[1:3] = ["green", "Masala"] 
>>> tea_varities
['Black', 'green', 'Masala', 'white']
>>> x    
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'x' is not defined
>>> tea_varities
['Black', 'green', 'Masala', 'white']
>>> tea_varities[1:1] 
[]
>>> tea_varities[1:1] = ["test", "test"] 
>>> tea_varities                        
['Black', 'test', 'test', 'green', 'Masala', 'white']
>>> tea_varities[1:2] 
['test']
>>> for tea in tea_varities:
...     print(tea) 
...
Black
test
test
green
Masala
white
>>> for tea in tea_varities:
...     print(tea, end='-') 
...
Black-test-test-green-Masala-white->>>
>>> tea_varities
['Black', 'test', 'test', 'green', 'Masala', 'white']
>>> if "oolong" in tea_varities:
...     print("I have oolong tea")
...
>>> tea_varities.append("oolong")    
>>> if "oolong" in tea_varities:   
...     print("I have oolong tea")
...
I have oolong tea
>>> tea_varities.pop()
'oolong'
>>> tea_varities
['Black', 'test', 'test', 'green', 'Masala', 'white']
>>> tea_varities.remove("test") 
>>> tea_varities               
['Black', 'test', 'green', 'Masala', 'white']
>>> tea_varities.remove("test")
>>> tea_varities
['Black', 'green', 'Masala', 'white']
>>> tea_varities
['Black', 'green', 'Masala', 'white']
>>> tea_varities.insert(1, "Oolong") 
>>> tea_varities
['Black', 'Oolong', 'green', 'Masala', 'white']
>>> tea_varities_copy = tea_varities.copy()
>>> tea_varities_copy
['Black', 'Oolong', 'green', 'Masala', 'white']
>>> tea-varities
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'varities' is not defined
>>> tea_varitites
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'tea_varitites' is not defined. Did you mean: 'tea_varities'?
>>> tea_varities     
['Black', 'Oolong', 'green', 'Masala', 'white']
>>> tea_varities.pop()
'white'
>>> tea_varities_copy 
['Black', 'Oolong', 'green', 'Masala', 'white']
>>> tea_varities_copy.append("Lemon") 
>>> tea_varities_copy
['Black', 'Oolong', 'green', 'Masala', 'white', 'Lemon']
>>> tea_varities      
['Black', 'Oolong', 'green', 'Masala']
>>> different reference
  File "<stdin>", line 1
    different reference
              ^^^^^^^^^
SyntaxError: invalid syntax
>>> squared_nums = [2, 4, 6] 
>>> range(10)                          
range(0, 10)
>>> print(range(10)) 
range(0, 10)
>>> y = range(10)
>>> y
range(0, 10)
>>> sq_nums = [x**2 for x in range(10)]\
...
>>>
>>> sq_nums = [x**2 for x in range(10)] 
>>> sq_nums                            
[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]
>>> cube_num = [y**3 for y in range(5)] 
>>> cube_num                           
[0, 1, 8, 27, 64]
>>> chai_types = {"Masala": "Spicy", "Ginger": "Zest", "Green": "Mild"} 
>>> chai_types                                                         
{'Masala': 'Spicy', 'Ginger': 'Zest', 'Green': 'Mild'}
>>> chai_types("Masala") 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'dict' object is not callable
>>> chai_types["Masala"] 
'Spicy'
>>> chai_types.get('Ginger') 
'Zest'
>>> chai_types.get('Gingery') 
>>> chai_types["Masalaa"]     
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'Masalaa'
>>> chai_types["Green"] = "Fresh" 
>>> chai_types                   
{'Masala': 'Spicy', 'Ginger': 'Zest', 'Green': 'Fresh'}
>>> for chai in chai_types: 
...     print(chai)
...
Masala
Ginger
Green
>>> for chai in chai_types: 
...     print(chai, chai_types[chai]) 
...
Masala Spicy
Ginger Zest
Green Fresh
>>> for key, values in chai_types.items():
...     print(key, values) 
...
Masala Spicy
Ginger Zest
Green Fresh
>>> if "Masala" in chai_types: 
...     print("I have Masala chai") 
...
I have Masala chai
>>> print(len(chai_types)) 
3
>>> chai_types
{'Masala': 'Spicy', 'Ginger': 'Zest', 'Green': 'Fresh'}
>>> chai_types["Earl Grey"] = "Citrus"
>>> chai_types
{'Masala': 'Spicy', 'Ginger': 'Zest', 'Green': 'Fresh', 'Earl Grey': 'Citrus'}
>>> chai_types.pop("Ginger") 
'Zest'
>>> chai_types
{'Masala': 'Spicy', 'Green': 'Fresh', 'Earl Grey': 'Citrus'}
>>> chai_types.popitem()
('Earl Grey', 'Citrus')
>>> chai_types 
{'Masala': 'Spicy', 'Green': 'Fresh'}
>>> del chai_types["Green"]  
>>> chai_types
{'Masala': 'Spicy'}
>>> chai_types_copy = chai_types.copy()
>>> chai_types_copy                    
{'Masala': 'Spicy'}
>>> chai_types_copy.append("Lemon": "Zest") 
  File "<stdin>", line 1
    chai_types_copy.append("Lemon": "Zest")
                                  ^
SyntaxError: invalid syntax
>>> tea_shop = {} 
>>> tea_shop = {
... "chai": {"Masala": "Spicy", "Ginger": "Zesty"},
... "Tea": {"Green": "MIld", "Black": "Strong"} 
... }
>>> tea_shop
{'chai': {'Masala': 'Spicy', 'Ginger': 'Zesty'}, 'Tea': {'Green': 'MIld', 'Black': 'Strong'}}
>>> tea_shop["chai"] 
{'Masala': 'Spicy', 'Ginger': 'Zesty'}
>>> tea_shop["chai"]["Ginger"] 
'Zesty'
>>> squared_num = {x:x**2 for x in range(6)}
>>> squared_num                             
{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25}
>>> squared_num.clear()
>>> squared_num
{}
>>> keys = ["Masala", "Ginger", "Lemon"]
>>> keys
['Masala', 'Ginger', 'Lemon']
>>> default_value = "Delicious"
>>> new_dict = dict.fromkeys(keys, default_value)
>>> new_dict
{'Masala': 'Delicious', 'Ginger': 'Delicious', 'Lemon': 'Delicious'}
>>> new_dict = dict.fromkeys(keys, keys)
>>> new_dict
{'Masala': ['Masala', 'Ginger', 'Lemon'], 'Ginger': ['Masala', 'Ginger', 'Lemon'], 'Lemon': ['Masala', 'Ginger', 'Lemon']}
>>>

